--- a/ml-coursera-python-assignments/Exercise4/exercise4.ipynb
+++ b/ml-coursera-python-assignments/Exercise4/exercise4.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,19 +410,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sigmoidGradient' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-41617cf72812>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlambda_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m J, _ = nnCostFunction(nn_params, input_layer_size, hidden_layer_size,\n\u001b[0;32m----> 3\u001b[0;31m                    num_labels, X, y, lambda_)\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cost at parameters (loaded from ex4weights): %.6f '\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mJ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The cost should be about                   : 0.287629.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-6170ac445341>\u001b[0m in \u001b[0;36mnnCostFunction\u001b[0;34m(nn_params, input_layer_size, hidden_layer_size, num_labels, X, y, lambda_)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0mdelta_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA_3\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m     \u001b[0mdelta_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTheta2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdelta_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msigmoidGradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZ_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[0;31m#     delta_2 = delta_2[1:]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sigmoidGradient' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost at parameters (loaded from ex4weights): 0.287629 \n",
+      "The cost should be about                   : 0.287629.\n"
      ]
     }
    ],
@@ -479,19 +475,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sigmoidGradient' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-3c87d40622af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlambda_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m J, _ = nnCostFunction(nn_params, input_layer_size, hidden_layer_size,\n\u001b[0;32m----> 4\u001b[0;31m                       num_labels, X, y, lambda_)\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cost at parameters (loaded from ex4weights): %.6f'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mJ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-6170ac445341>\u001b[0m in \u001b[0;36mnnCostFunction\u001b[0;34m(nn_params, input_layer_size, hidden_layer_size, num_labels, X, y, lambda_)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0mdelta_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA_3\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m     \u001b[0mdelta_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTheta2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdelta_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msigmoidGradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZ_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[0;31m#     delta_2 = delta_2[1:]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sigmoidGradient' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost at parameters (loaded from ex4weights): 0.383770\n",
+      "This value should be about                 : 0.383770.\n"
      ]
     }
    ],
@@ -555,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,9 +599,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sigmoid gradient evaluated at [-1 -0.5 0 0.5 1]:\n",
+      "  \n",
+      "[0.19661193 0.23500371 0.25       0.23500371 0.19661193]\n"
+     ]
+    }
+   ],
    "source": [
     "z = np.array([-1, -0.5, 0, 0.5, 1])\n",
     "g = sigmoidGradient(z)\n",
@@ -657,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,9 +716,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing Neural Network Parameters ...\n"
+     ]
+    }
+   ],
    "source": [
     "print('Initializing Neural Network Parameters ...')\n",
     "\n",
@@ -803,9 +813,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-9.27825235e-03 -9.27825236e-03]\n",
+      " [-3.04978931e-06 -3.04978914e-06]\n",
+      " [-1.75060082e-04 -1.75060082e-04]\n",
+      " [-9.62660640e-05 -9.62660620e-05]\n",
+      " [ 8.89911959e-03  8.89911960e-03]\n",
+      " [ 1.42869427e-05  1.42869443e-05]\n",
+      " [ 2.33146358e-04  2.33146357e-04]\n",
+      " [ 1.17982666e-04  1.17982666e-04]\n",
+      " [-8.36010761e-03 -8.36010762e-03]\n",
+      " [-2.59383093e-05 -2.59383100e-05]\n",
+      " [-2.87468729e-04 -2.87468729e-04]\n",
+      " [-1.37149707e-04 -1.37149706e-04]\n",
+      " [ 7.62813551e-03  7.62813551e-03]\n",
+      " [ 3.69883235e-05  3.69883234e-05]\n",
+      " [ 3.35320347e-04  3.35320347e-04]\n",
+      " [ 1.53247082e-04  1.53247082e-04]\n",
+      " [-6.74798370e-03 -6.74798370e-03]\n",
+      " [-4.68759787e-05 -4.68759769e-05]\n",
+      " [-3.76215585e-04 -3.76215587e-04]\n",
+      " [-1.66560297e-04 -1.66560294e-04]\n",
+      " [ 3.14544970e-01  3.14544970e-01]\n",
+      " [ 1.64090819e-01  1.64090819e-01]\n",
+      " [ 1.64567932e-01  1.64567932e-01]\n",
+      " [ 1.58339334e-01  1.58339334e-01]\n",
+      " [ 1.51127527e-01  1.51127527e-01]\n",
+      " [ 1.49568335e-01  1.49568335e-01]\n",
+      " [ 1.11056588e-01  1.11056588e-01]\n",
+      " [ 5.75736493e-02  5.75736493e-02]\n",
+      " [ 5.77867378e-02  5.77867378e-02]\n",
+      " [ 5.59235296e-02  5.59235296e-02]\n",
+      " [ 5.36967009e-02  5.36967009e-02]\n",
+      " [ 5.31542052e-02  5.31542052e-02]\n",
+      " [ 9.74006970e-02  9.74006970e-02]\n",
+      " [ 5.04575855e-02  5.04575855e-02]\n",
+      " [ 5.07530173e-02  5.07530173e-02]\n",
+      " [ 4.91620841e-02  4.91620841e-02]\n",
+      " [ 4.71456249e-02  4.71456249e-02]\n",
+      " [ 4.65597186e-02  4.65597186e-02]]\n",
+      "The above two columns you get should be very similar.\n",
+      "(Left-Your Numerical Gradient, Right-Analytical Gradient)\n",
+      "\n",
+      "If your backpropagation implementation is correct, then \n",
+      "the relative difference will be small (less than 1e-9). \n",
+      "Relative Difference: 2.09579e-11\n"
+     ]
+    }
+   ],
    "source": [
     "utils.checkNNGradients(nnCostFunction)"
    ]
@@ -861,9 +922,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-9.27825235e-03  5.90721748e-01]\n",
+      " [-1.67679797e-02 -1.67679797e-02]\n",
+      " [-6.01744725e-02 -6.01744725e-02]\n",
+      " [-1.73704651e-02 -1.73704651e-02]\n",
+      " [ 8.89911959e-03  6.08899120e-01]\n",
+      " [ 3.94334829e-02  3.94334829e-02]\n",
+      " [-3.19612287e-02 -3.19612287e-02]\n",
+      " [-5.75658668e-02 -5.75658668e-02]\n",
+      " [-8.36010761e-03  5.91639892e-01]\n",
+      " [ 5.93355565e-02  5.93355565e-02]\n",
+      " [ 2.49225535e-02  2.49225535e-02]\n",
+      " [-4.51963845e-02 -4.51963845e-02]\n",
+      " [ 7.62813551e-03  6.07628136e-01]\n",
+      " [ 2.47640974e-02  2.47640974e-02]\n",
+      " [ 5.97717617e-02  5.97717617e-02]\n",
+      " [ 9.14587966e-03  9.14587966e-03]\n",
+      " [-6.74798370e-03  5.93252016e-01]\n",
+      " [-3.26881426e-02 -3.26881426e-02]\n",
+      " [ 3.86410548e-02  3.86410548e-02]\n",
+      " [ 5.46101547e-02  5.46101547e-02]\n",
+      " [ 3.14544970e-01  9.14544970e-01]\n",
+      " [ 1.18682669e-01  1.18682669e-01]\n",
+      " [ 2.03987128e-01  2.03987128e-01]\n",
+      " [ 1.25698067e-01  1.25698067e-01]\n",
+      " [ 1.76337550e-01  1.76337550e-01]\n",
+      " [ 1.32294136e-01  1.32294136e-01]\n",
+      " [ 1.11056588e-01  7.11056588e-01]\n",
+      " [ 3.81928666e-05  3.81928696e-05]\n",
+      " [ 1.17148233e-01  1.17148233e-01]\n",
+      " [-4.07588279e-03 -4.07588279e-03]\n",
+      " [ 1.13133142e-01  1.13133142e-01]\n",
+      " [-4.52964427e-03 -4.52964427e-03]\n",
+      " [ 9.74006970e-02  6.97400697e-01]\n",
+      " [ 3.36926556e-02  3.36926556e-02]\n",
+      " [ 7.54801264e-02  7.54801264e-02]\n",
+      " [ 1.69677090e-02  1.69677090e-02]\n",
+      " [ 8.61628953e-02  8.61628953e-02]\n",
+      " [ 1.50048381e-03  1.50048382e-03]]\n",
+      "The above two columns you get should be very similar.\n",
+      "(Left-Your Numerical Gradient, Right-Analytical Gradient)\n",
+      "\n",
+      "If your backpropagation implementation is correct, then \n",
+      "the relative difference will be small (less than 1e-9). \n",
+      "Relative Difference: 0.733708\n",
+      "\n",
+      "\n",
+      "Cost at (fixed) debugging parameters (w/ lambda = 3.000000): 0.576051 \n",
+      "(for lambda = 3, this value should be about 0.576051)\n"
+     ]
+    }
+   ],
    "source": [
     "#  Check gradients by running checkNNGradients\n",
     "lambda_ = 3\n",
@@ -899,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,9 +1061,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Set Accuracy: 95.040000\n"
+     ]
+    }
+   ],
    "source": [
     "pred = utils.predict(Theta1, Theta2, X)\n",
     "print('Training Set Accuracy: %f' % (np.mean(pred == y) * 100))"
